automatically backed up by learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -82,7 +82,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "la_boca = neighbhorhoods9"
+    "la_boca = neighbhorhoods[4]"
    ]
   },
   {
