--- a/index.ipynb
+++ b/index.ipynb
@@ -78,23 +78,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 5,
    "metadata": {},
-   "outputs": [
-    {
-     "ename": "NameError",
-     "evalue": "name 'neighbhorhoods' is not defined",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[0;31m\u001b[0m",
-      "\u001b[0;31mNameError\u001b[0mTraceback (most recent call last)",
-      "\u001b[0;32m<ipython-input-4-511f25511a3e>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m\u001b[0m\n\u001b[0;32m----> 1\u001b[0;31m \u001b[0mla_boca\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mneighbhorhoods\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0;36m5\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m",
-      "\u001b[0;31mNameError\u001b[0m: name 'neighbhorhoods' is not defined"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
-    "la_boca = neighbhorhoods[5]"
+    "la_boca = neighborhoods[5]"
    ]
   },
   {
