--- a/index.ipynb
+++ b/index.ipynb
@@ -142,7 +142,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [
     {
@@ -151,7 +151,12 @@
      "text": [
       "Collecting pip\n",
       "\u001b[?25l  Downloading https://files.pythonhosted.org/packages/c2/d7/90f34cb0d83a6c5631cf71dfe64cc1054598c843a92b400e55675cc2ac37/pip-18.1-py2.py3-none-any.whl (1.3MB)\n",
-      "\u001b[K    100% |████████████████████████████████| 1.3MB 5.7MB/s ta 0:00:011\n"
+      "\u001b[K    100% |████████████████████████████████| 1.3MB 5.7MB/s ta 0:00:011\n",
+      "\u001b[?25hInstalling collected packages: pip\n",
+      "  Found existing installation: pip 18.0\n",
+      "    Uninstalling pip-18.0:\n",
+      "      Successfully uninstalled pip-18.0\n",
+      "Successfully installed pip-18.1\n"
      ]
     }
    ],
